# SoftwareManagementCourse2019

./: .gitignore  Jenkinsfile  Jenkinsfile_cscs  README.md  environment.sh  hello.c  hello.cxx  sbatch_test.sh  symlink.sh  unwanted_file.txt
cmake/: 2019-05-13^.14_CMake.pptx
cmake/examples/session1/: CMakeLists.txt
cmake/handson/: validate_handson.sh
cmake/handson/0_basics/: README.txt
cmake/handson/0_basics/dirty/dotprodcl/: CMakeLists.txt
cmake/handson/0_basics/dirty/dotprodcl/src/: dotprodcl.cc
cmake/handson/0_basics/excercise/: instructions.txt
cmake/handson/0_basics/excercise/dotprod/src/: dotprod.cc  dotprod.h
cmake/handson/0_basics/excercise/dotprod/tests/: norm.cc  orthogonal.cc
cmake/handson/0_basics/excercise/dotprodcl/: CMakeLists.txt
cmake/handson/0_basics/excercise/dotprodcl/src/: dotprodcl.cc
cmake/handson/0_basics/solution/dotprod/: CMakeLists.txt
cmake/handson/0_basics/solution/dotprod/tests/: CMakeLists.txt
cmake/handson/0_basics/solution/dotprodcl/: CMakeLists.txt  src
cmake/handson/0_basics/solution/dotprodcl_with_linking/: CMakeLists.txt
cmake/handson/1_basics/: README.md  README.txt
cmake/handson/1_basics/excercise/dotprod/: CMakeLists.txt
cmake/handson/1_basics/excercise/dotprodcl/src/: dotprodcl.cc
cmake/handson/1_basics/exercise/dotprod/src/: dotprod.cc
cmake/handson/1_basics/exercise/dotprod/tests/: norm.cc
cmake/handson/1_basics/exercise/dotprodcl/: CMakeLists.txt
cmake/handson/1_basics/solution/dotprod/: CMakeLists.txt  src
cmake/handson/1_basics/solution/dotprod/src/: dotprod.cc  dotprod.h
cmake/handson/1_basics/solution/dotprod/tests/: CMakeLists.txt
cmake/handson/1_basics/solution/dotprodcl/: CMakeLists.txt
cmake/handson/1_basics/solution/dotprodcl/src/: CMakeLists.txt
cmake/handson/1_basics/solution/dotprodcl_with_linking/: CMakeLists.txt
cmake/handson/1_basics/solution/dotprodcl_with_linking/src/: CMakeLists.txt  dotprodcl.cc
cmake/handson/1_export_targets/: README.txt
cmake/handson/1_export_targets/excercise/: instructions.txt
cmake/handson/1_export_targets/excercise/dotprod/tests/: CMakeLists.txt  orthogonal.cc
cmake/handson/1_export_targets/excercise/dotprodcl/: CMakeLists.txt
cmake/handson/1_export_targets/solution/dotprod/: src
cmake/handson/1_export_targets/solution/dotprod/tests/: orthogonal.cc
cmake/handson/1_export_targets/solution/dotprod_with_export/: tests
cmake/handson/1_export_targets/solution/dotprod_with_export/cmake/: export.cmake
cmake/handson/1_export_targets/solution/dotprodcl/cmake/: FindDotprod.cmake
cmake/handson/1_link_libraries_with_scope/: README.txt
cmake/handson/2_ctest_and_more/: README.txt
cmake/handson/2_ctest_and_more/excercise/: instructions.txt
cmake/handson/2_ctest_and_more/excercise/dotprod/: CMakeLists.txt
cmake/handson/2_ctest_and_more/excercise/dotprod/tests/: CMakeLists.txt  norm.cc
cmake/handson/2_ctest_and_more/solution/dotprod/tests/: CMakeLists.txt  large_vector.cc
cmake/handson/2_external_libraries/: README.txt
cmake/handson/2_external_libraries/dirty/dotprod/: .gitignore  CMakeLists.txt
cmake/handson/2_external_libraries/dirty/dotprod/src/: dot_product_impl.cu  dot_product_impl.h
cmake/handson/2_external_libraries/dirty/dotprodcl/: CMakeLists.txt
cmake/handson/2_external_libraries/dirty/dotprodcl/src/: dotprodcl.cc
cmake/handson/2_modern_cmake/: README.md
cmake/handson/2_modern_cmake/excercise/: instructions.txt
cmake/handson/2_modern_cmake/excercise/dotprodcl/: CMakeLists.txt
cmake/handson/2_modern_cmake/excercise/dotprodcl/cmake/: FindDotprod.cmake
cmake/handson/2_modern_cmake/excercise/dotprodcl/src/: dotprodcl.cc
cmake/handson/2_modern_cmake/exercise/dotprodcl/: CMakeLists.txt
cmake/handson/2_modern_cmake/solution/dotprod/tests/: CMakeLists.txt
cmake/handson/2_modern_cmake/solution/dotprod_with_export/: CMakeLists.txt
cmake/handson/2_modern_cmake/solution/dotprod_with_export/cmake/: dotprod-config.cmake.in
cmake/handson/2_modern_cmake/solution/dotprod_with_export/src/: dotprod.h
cmake/handson/2_modern_cmake/solution/dotprodcl/: CMakeLists.txt  src
cmake/handson/2_modern_cmake/solution/dotprodcl/cmake/: FindDotprod.cmake  FindDotprodSimple.cmake
cmake/handson/2_modern_cmake/solution/dotprodcl/src/: CMakeLists.txt  dotprodcl.cc
cmake/handson/3_advanced/: README.txt
cmake/handson/3_advanced/clean/dotprod/: CMakeLists.txt
cmake/handson/3_advanced/dirty/dotprod/src/: dot_product_impl.cu  dot_product_impl.h
cmake/handson/3_advanced/dirty/dotprodcl/src/: dotprodcl.cc
cmake/handson/3_advanced/excercise/dotprod/src/: dotprod.cc  dotprod.cu
cmake/handson/3_installing_libs/: README.md
cmake/handson/3_installing_libs/excercise/: instructions.txt
cmake/handson/3_installing_libs/excercise/dotprodcl/src/: CMakeLists.txt
cmake/handson/3_installing_libs/exercise/dotprod/: CMakeLists.txt
cmake/handson/3_installing_libs/exercise/dotprod/tests/: CMakeLists.txt
cmake/handson/3_installing_libs/exercise/dotprodcl/: CMakeLists.txt
cmake/handson/3_installing_libs/exercise/dotprodcl/src/: CMakeLists.txt  dotprodcl.cc
cmake/handson/3_installing_libs/solution/dotprod_todo_move/: CMakeLists.txt
cmake/handson/3_installing_libs/solution/dotprod_with_export/: CMakeLists.txt  src
cmake/handson/3_installing_libs/solution/dotprod_with_export/cmake/: export.cmake
cmake/handson/4_advanced/: README.md
cmake/handson/4_advanced/excercise/: instructions.txt
cmake/handson/4_advanced/exercise/dotprod/src/: CMakeLists.txt
cmake/handson/4_advanced/exercise/dotprod/tests/: CMakeLists.txt  large_vector.cc
cmake/handson/4_advanced/solution/dotprod/: CMakeLists.txt  cmake  src
cmake/handson/4_advanced/solution/dotprod/tests/: CMakeLists.txt  large_vector.cc  norm.cc  orthogonal.cc
cmake/handson/5_extra/: README.md
cmake/handson/5_extra/exercise/dotprod/: CMakeLists.txt
cmake/handson/5_extra/exercise/dotprod/tests/: CMakeLists.txt  large_vector.cc
git/: bash_git.sh  jb-dot-gitconfig  test_1.sh
git/bash_git/: git-completion.sh  git-prompt.sh  git-ps1.sh
(+7 files in other folders)
